# STVC

./: INTEGRATION_TESTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  stvc.bat
.omc/: SWARM_COMPLETION_SUMMARY.md
.omc/plans/: stvc-phases-3-4.md
.omc/state/: subagent-tracking.json  swarm-tasks.json
.omc/state/checkpoints/: checkpoint-2026-02-13T16-23-27-083Z.json  checkpoint-2026-02-13T16-29-42-200Z.json  checkpoint-2026-02-13T16-34-28-079Z.json
docs/: Code-Aware Dictation Research 2026-02-07.md  future-upgrades.md  implementation-plan.md
docs/research/: Existing-STT-Tools-Survey-2026-02-07.md  STT-Approach-Analysis-2026-02-07.md  STT-Engine-Comparison-2026-02-07.md  Windows-Text-Injection-Methods-2026-02-07.md
src/stvc/: __init__.py  __main__.py  app.py  audio.py  config.py  hotkey.py  injector.py  postprocess.py  settings.py  transcriber.py  tray.py
src/stvc/context/: __init__.py  extractors.py  merger.py  term_parser.py  window_detect.py
